--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-venv
-__pycache__
 .DS_Store
-out.mp4
-final.mp4
+__pycache__
+.venv
+*.mp4
 .vscode
-*.egg-info/
 build 
 dist
-test.mp4
-output_animation.mp4
